[tool.poetry]
name = "naver_blog_md"
version = "0.1.0"
description = ""
authors = ["Minjae Gwon <beta.underalpha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
bs4 = "^0.0.2"
pyyaml = "^6.0.1"
pydantic = "^2.7.0"
multiprocess = "^0.70.16"
python-dotenv = "^1.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
